@@ -1,9 +1,0 @@
-- TODO:
-
-- user management with roles (-->device)
-- gallery management for admins (-->paperclip)
-- searchable tables ransack
-- gallery view
-
-- mailer configuration
-- menus with hover dropdown
