@@ -1,0 +1,5 @@
+class MakeGalleryKeyUnique < ActiveRecord::Migration
+  def change
+    add_index :galleries, :key, :unique => true
+  end
+end
