@@ -1,0 +1,14 @@
+require 'test_helper'
+
+class GalleryPermissionControllerTest < ActionController::TestCase
+  test "should get new" do
+    get :new
+    assert_response :success
+  end
+
+  test "should get create" do
+    get :create
+    assert_response :success
+  end
+
+end
